objects/Location_Work__c.object
<CustomObject>
    <description>Work that needs to be done at a location associated with the organization. E.g. extra cleanings, repairs, etc.</description>
    <fields>
        <fullName>Description_of_Work__c</fullName>
        <inlineHelpText>Detailed description of the work that is to be completed at the location</inlineHelpText>
        <label>Description of Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Scheduled end date of the work</inlineHelpText>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Location where the work is to be done</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Location Work</relationshipLabel>
        <relationshipName>Location_Work</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date the the work will start</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the work to be done</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <inlineHelpText>Vendor that will be completing the work (if not internal)</inlineHelpText>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Location Work</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Work Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Work</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>